test/functions/deitz/named/test_named6-error.good
Error: The named argument 'i' is used more than once in the same function call. (test_named6-error.chpl:5)
