test/functions/deitz/named/test_named6-error.chpl
function foo(i : integer, j : integer, k : integer) {
  writeln("foo of ", i, ", ", j, ", ", k);
}

foo(i = 1, i = 2, 3);
